Vector db switched from chroma to pinecone

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,17 @@ MASTER_ENCRYPTION_KEY=your-64-character-hex-string-here
 BLOCKCHAIN_PROVIDER_URL=https://polygon-mumbai.g.alchemy.com/v2/YOUR-API-KEY
 CONTRACT_ADDRESS=0xYourDeployedContractAddress
 BLOCKCHAIN_PRIVATE_KEY=0xYourWalletPrivateKey
+
+# ==================================================
+# Cloud Vector Store (OPTIONAL - for production)
+# ==================================================
+# Options: "chroma" (local), "pinecone", "qdrant"
+VECTOR_STORE_TYPE=chroma
+
+# Pinecone (https://www.pinecone.io)
+# PINECONE_API_KEY=your-pinecone-api-key
+# PINECONE_ENVIRONMENT=us-east-1
+
+# Qdrant (https://cloud.qdrant.io)
+# QDRANT_URL=https://your-cluster.qdrant.io
+# QDRANT_API_KEY=your-qdrant-api-key
