--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,56 @@
+# Core Web Framework
 fastapi==0.115.12
 uvicorn==0.34.2
 python-multipart==0.0.20
-sqlalchemy==2.0.40
 python-dotenv==1.1.0
 pydantic==2.11.4
 pydantic-settings==2.11.0
+
+# LLM & AI
 openai==1.109.1
 langchain==0.2.15
 langchain-community==0.2.15
 langchain-core<0.3.0
 langchain-openai==0.1.25
 langchain-experimental<0.3.0
+tavily-python==0.7.12
+tiktoken==0.7.0
+
+# Embeddings & RAG
+sentence-transformers>=3.3.1
+huggingface-hub>=0.23.0
+
+# Vector Stores
+pinecone>=5.0.0  # Production cloud vector store
+chromadb==1.2.1  # Optional: Local development only
+# qdrant-client>=1.7.0  # Alternative cloud option
+
+# Database
+pymongo==4.6.1  # MongoDB driver
+motor==3.3.2     # Async MongoDB
+
+# Authentication & Security
+firebase-admin==6.5.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+cryptography==41.0.7
+
+# Document Processing
+pypdf==4.3.1
+unstructured==0.15.9
+unstructured-client==0.25.5
+networkx==3.3
+
+# Google Drive Integration (Optional)
 google-auth
 google-auth-oauthlib
 google-api-python-client
-huggingface-hub>=0.23.0
-chromadb==1.2.1
-tiktoken==0.7.0
-tavily-python==0.7.12
 
-# Authentication & Security
-python-jose[cryptography]==3.5.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
-firebase-admin==6.5.0
-
-# HTTP & Utilities
-requests==2.32.3
-
-# Document Processing
-unstructured==0.15.9
-unstructured-client==0.25.5
-pypdf==4.3.1
-networkx==3.3
-sentence-transformers>=3.3.1
-
-# MongoDB & Database
-pymongo==4.6.1
-motor==3.3.2
-
-# Encryption & Security
-cryptography==41.0.7
-
-# Blockchain
+# Blockchain (Optional)
 web3==6.11.3
 eth-account==0.10.0
 eth-utils==2.3.1
 py-solc-x==2.0.3
+
+# HTTP Utilities
+requests==2.32.3
