--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,12 @@ bcrypt==4.0.1
 
 # HTTP & Utilities
 requests==2.32.3
+httpx>=0.24.0
 newsapi-python==0.2.7
+
+# Caching & Progress
+cachetools>=5.3.0
+tqdm>=4.65.0
 
 # Document Processing
 pypdf==4.3.1
